--- a/comittee.html
+++ b/comittee.html
@@ -227,53 +227,53 @@
     </div> <!-- end of ex-basic-2 -->
     <!-- end of privacy content -->
 
-    <!-- Footer -->
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="footer-col third">
-                        <h5>Links</h5>
-                        <ul class="list-unstyled li-space-lg p-small">
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="https://forms.gle/xKfLRbK9NiyM8Tk89">Register</a></div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="https://forms.gle/GoHoPymmkq274VAF8">Register for ICSF</a></div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="https://forms.gle/LwXJiEZYMfjYdh3E7">Submit Abstract</a></div>
-                            </li>
-                        </ul>
-                    </div>
-                </div> <!-- end of col -->
-
-                <div class="col-md-4">
-                    <div class="footer-col third">
-                        <h5>Links</h5>
-                        <ul class="list-unstyled li-space-lg p-small">
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="register.html">Register</a></div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="ssbf.html">About SSBF</a></div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="iiita.html">About IIITA</a></div>
-                            </li>
-                        </ul>
-                    </div>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of footer -->
-    <!-- end of footer -->
+        <!-- Footer -->
+        <div class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="footer-col third">
+                            <h5>Links</h5>
+                            <ul class="list-unstyled li-space-lg p-small">
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body"><a href="https://forms.gle/xKfLRbK9NiyM8Tk89">Register for SSBF</a></div>
+                                </li>
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body"><a href="https://forms.gle/GoHoPymmkq274VAF8">Register for ICSF</a></div>
+                                </li>
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body"><a href="https://forms.gle/LwXJiEZYMfjYdh3E7">Submit Abstract</a></div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div> <!-- end of col -->
+    
+                    <div class="col-md-4">
+                        <div class="footer-col third">
+                            <h5>Links</h5>
+                            <ul class="list-unstyled li-space-lg p-small">
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body"><a href="fees.html">Fees and Accomodation</a></div>
+                                </li>
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body"><a href="ssbf.html">About SSBF</a></div>
+                                </li>
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body"><a href="iiita.html">About IIITA</a></div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+            </div> <!-- end of container -->
+        </div> <!-- end of footer -->
+        <!-- end of footer -->
 
 
     <!-- Copyright -->
