--- a/dates.html
+++ b/dates.html
@@ -217,11 +217,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="footer-col first">
-                        <h5>About the Department</h5>
-                        <p class="p-small">The Department of Management Studies, IIIT, Allahabad was constituted with
-                            the philosophy of running and
-                            managing the programmes with a focus on Management and Technology.</p>
+                    <div class="footer-col third">
+                        <h5>Links</h5>
+                        <ul class="list-unstyled li-space-lg p-small">
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body"><a href="https://forms.gle/xKfLRbK9NiyM8Tk89">Register for SSBF</a></div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body"><a href="https://forms.gle/GoHoPymmkq274VAF8">Register for ICSF</a></div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body"><a href="https://forms.gle/LwXJiEZYMfjYdh3E7">Submit Abstract</a></div>
+                            </li>
+                        </ul>
                     </div>
                 </div> <!-- end of col -->
 
@@ -231,41 +242,17 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="register.html">Register</a></div>
+                                <div class="media-body"><a href="fees.html">Fees and Accomodation</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="pastsummerschool.html">Past Summer Schools</a></div>
+                                <div class="media-body"><a href="ssbf.html">About SSBF</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
                                 <div class="media-body"><a href="iiita.html">About IIITA</a></div>
                             </li>
                         </ul>
-                    </div>
-                </div> <!-- end of col -->
-                <div class="col-md-3">
-                    <div class="footer-col fourth">
-                        <h5>Social Media</h5>
-                        <p class="p-small">For news & updates follow us</p>
-                        <a href="#your-link">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#your-link">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#your-link">
-                            <i class="fab fa-pinterest-p"></i>
-                        </a>
-                        <a href="#your-link">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="#your-link">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                        <a href="#your-link">
-                            <i class="fab fa-youtube"></i>
-                        </a>
                     </div>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
