--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                 <div class="col-lg-12">
                     <div class="text-container">
                         <h1>Summer School on Behavioural Finance</h1>
+                        <h3 style="color: white;">13th June to 17th June 2022</h3>
                         <p class="p-large">Organized By<br />Department of Management Studies, Indian Institute of
                             Information Technology, Allahabad, Prayagraj</p>
                         <a class="btn-solid-lg page-scroll"
@@ -485,7 +486,7 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="https://forms.gle/xKfLRbK9NiyM8Tk89">Register</a></div>
+                                <div class="media-body"><a href="https://forms.gle/xKfLRbK9NiyM8Tk89">Register for SSBF</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -505,7 +506,7 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="register.html">Register</a></div>
+                                <div class="media-body"><a href="fees.html">Fees and Accomodation</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
