--- a/ssbf.html
+++ b/ssbf.html
@@ -374,7 +374,7 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="https://forms.gle/xKfLRbK9NiyM8Tk89">Register</a></div>
+                                <div class="media-body"><a href="https://forms.gle/xKfLRbK9NiyM8Tk89">Register for SSBF</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -394,7 +394,7 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="register.html">Register</a></div>
+                                <div class="media-body"><a href="fees.html">Fees and Accomodation</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
