--- a/speaker.html
+++ b/speaker.html
@@ -367,7 +367,7 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="https://forms.gle/xKfLRbK9NiyM8Tk89">Register</a></div>
+                                <div class="media-body"><a href="https://forms.gle/xKfLRbK9NiyM8Tk89">Register for SSBF</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -387,7 +387,7 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="register.html">Register</a></div>
+                                <div class="media-body"><a href="fees.html">Fees and Accomodation</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
