--- a/comittee.html
+++ b/comittee.html
@@ -180,12 +180,12 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\uphar-singh.jpeg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\kajol.jpeg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
                     <h5>Kajol</h5>
-                    <span>Asst. Coordinator</span>
+                    <span>Assistant Coordinator</span>
                 </div>
             </div>
             
@@ -281,7 +281,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2021 <a href="https://iiita.ac.in">IIIT Allahabad</a> - All rights
+                    <p class="p-small">Copyright © 2022 <a href="https://iiita.ac.in">IIIT Allahabad</a> - All rights
                         reserved</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
