--- a/comittee.html
+++ b/comittee.html
@@ -126,7 +126,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="white">Speakers </h1>
+                    <h1 class="white">ORGANIZING COMITTEE </h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
