--- a/speaker.html
+++ b/speaker.html
@@ -161,7 +161,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\akhilesh chandra pandey.jpg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\akhilesh chandra pandey.jpg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -173,7 +173,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\priyanka-sharma.jpg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\priyanka-sharma.jpg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -185,7 +185,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\ravindra tripathi.png" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\ravindra tripathi.png" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -197,7 +197,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\amalesh-bhowal.png" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\amalesh-bhowal.png" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -209,7 +209,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\shailendra-kumar.jpg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\shailendra-kumar.jpg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -221,7 +221,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\vijayshri-tewari.jpg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\vijayshri-tewari.jpg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -233,7 +233,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\shashikant-rai.jpg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\shashikant-rai.jpg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -245,7 +245,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\dibyojyoti-bhattacharjee.jpg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\dibyojyoti-bhattacharjee.jpg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -257,7 +257,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\kesava-rao.png" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\kesava-rao.png" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -279,7 +279,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\habib-ratvi.jpg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\habib-ratvi.jpg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -291,7 +291,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\mohammad-sogir.png" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\mohammad-sogir.png" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -303,7 +303,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\rafiqul-bhuyan.jpg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\rafiqul-bhuyan.jpg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -325,7 +325,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\jayshree-bhattacharjee.jpg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\jayshree-bhattacharjee.jpg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
@@ -337,7 +337,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src=".\images\comittee\shankharaj-roy.jpg" alt="team member" class="img-responsive pic">
+                        <img src=".\images\speakers\shankharaj-roy.jpg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
                 <div class="team-title">
