added prof in supporting members

--- a/comittee.html
+++ b/comittee.html
@@ -180,6 +180,30 @@
             <div class="col-md-4 col-sm-4">
                 <div class="team-member">
                     <div class="team-img">
+                        <img src=".\images\shashikant-rai.jpg" alt="team member" class="img-responsive pic">
+                    </div>
+                </div>
+                <div class="team-title">
+                    <h5>Dr. Shashikant Rai</h5>
+                    <span>Assistant Professor</span>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-4">
+                <div class="team-member">
+                    <div class="team-img">
+                        <img src=".\images\saurabhmishra.jpg" alt="team member" class="img-responsive pic">
+                    </div>
+                </div>
+                <div class="team-title">
+                    <h5>Dr. Saurabh Mishra</h5>
+                    <span>Assistant Professor</span>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-4">
+                <div class="team-member">
+                    <div class="team-img">
                         <img src=".\images\kajol.jpeg" alt="team member" class="img-responsive pic">
                     </div>
                 </div>
