--- a/comittee.html
+++ b/comittee.html
@@ -140,7 +140,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Speakers</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Comittee</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
