--- a/publication.html
+++ b/publication.html
@@ -188,8 +188,8 @@
     <!-- Privacy Content -->
     <div class="ex-basic-2">
         <div class="ex-basic-2 tab">
-            <h3>A MEMORENDUM of UNDERSTANDING (MoU) HAS BEEN SIGNED BETWEEN CENTRE FOR RESEARCH ON ISLAMIC BANKING & FINANCE AND BUSINESS (CRIBFB) & 
-                CHIEF PROGRAMME COORDINATOR, SUMMER SCHOOL ON BEHAVIOURAL FINANCE, INDIAN INSTITUTE OF INFORMATION TECHNOLOGY (IIIT)</h3>
+            <h3>A MEMORENDUM of UNDERSTANDING (MoU) has been signed BETWEEN CENTRE FOR RESEARCH ON ISLAMIC BANKING & FINANCE AND BUSINESS (CRIBFB) & 
+                CHIEF PROGRAMME COORDINATOR, SUMMER SCHOOL ON BEHAVIOURAL FINANCE, INDIAN INSTITUTE OF INFORMATION TECHNOLOGY (IIIT).</h3>
                 <br>
             <h4>We have collaborations with some of the reputed journals. Selected research
                 papers will have the opportunity to be published in the following journals.</h4>
