--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                             </div>
                             
                             <div class="form-group">
-                                <button onclick="document.location='https://forms.gle/xKfLRbK9NiyM8Tk89'" type="submit" class="form-control-submit-button">REGISTER FOR SUMMER SCHOOL</button>
+                                <button onclick="document.location='https://forms.gle/xKfLRbK9NiyM8Tk89'" type="button" class="form-control-submit-button">REGISTER FOR CONFERENCE (ICBF)</button>
                             </div>
                             <div class="form-group">
-                                <button onclick="document.location='https://forms.gle/GoHoPymmkq274VAF8'" type="submit" class="form-control-submit-button">REGISTER FOR CONFERENCE (ICBF)</button>
+                                <button onclick="document.location='https://forms.gle/GoHoPymmkq274VAF8'" type="button" class="form-control-submit-button">REGISTER FOR CONFERENCE (ICBF)</button>
                             </div>
                             <div class="form-message">
                                 <div id="rmsgSubmit" class="h3 text-center hidden"></div>
